Kubernetes/cwiczenia/Podstawy-3/rozwiazania/affinity-3.1-nginx-ssd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ssd
  namespace: cwiczenia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-ssd
  template:
    metadata:
      labels:
        app: nginx-ssd
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: disktype
                operator: In
                values:
                - ssd
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
