Kubernetes/cwiczenia/Podstawy-3/rozwiazania/affinity-3.3-nginx-distributed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-distributed
  namespace: cwiczenia
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx-distributed
  template:
    metadata:
      labels:
        app: nginx-distributed
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - nginx-distributed
            topologyKey: kubernetes.io/hostname
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
