Kubernetes/cwiczenia/Podstawy-3/rozwiazania/limitrange-5.3-nginx-limitrange-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-limitrange
  namespace: cwiczenia
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
