Kubernetes/cwiczenia/Podstawy-3/rozwiazania/netpol-6.4-restricted-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restricted-app
  namespace: cwiczenia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restricted
  template:
    metadata:
      labels:
        app: restricted
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
