Kubernetes/cwiczenia/Podstawy-3/rozwiazania/sa-2.1-nginx-sa-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-sa
  namespace: cwiczenia
spec:
  serviceAccountName: my-service-account
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
