Kubernetes/cwiczenia/Podstawy-3/rozwiazania/sa-2.2-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  namespace: cwiczenia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      serviceAccountName: app-sa
      automountServiceAccountToken: false
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
