Kubernetes/cwiczenia/Podstawy-3/rozwiazania/taints-4.2-nginx-running-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-running
  namespace: cwiczenia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-running
  template:
    metadata:
      labels:
        app: nginx-running
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
