Kubernetes/cwiczenia/Podstawy-3/rozwiazania/taints-4.3-gpu-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpu-app
  namespace: cwiczenia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gpu-app
  template:
    metadata:
      labels:
        app: gpu-app
    spec:
      tolerations:
      - key: node-type
        operator: Equal
        value: gpu
        effect: NoSchedule
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
