Kubernetes/cwiczenia/Podstawy-3/rozwiazania/netpol-6.1-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: cwiczenia
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
