Kubernetes/cwiczenia/Podstawy-3/rozwiazania/netpol-6.3-allow-from-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-namespace
  namespace: cwiczenia
spec:
  podSelector:
    matchLabels:
      app: monitored
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
